# 3d-editor

./: CMakeLists.txt  application.qrc  gmlibscenequickfbo.cpp  gmlibscenequickfbo.h  guiapplication.cpp  guiapplication.cpp.autosave  guiapplication.h  scenario.cpp  scenario.h  testtorus.cpp  window.cpp
gmlibsceneloader/: gmlibsceneloaderdatadescription.cpp
openddl/: CMakeLists.txt
qml/: main.qml
qml/components/: FPSbox.qml
